--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <body>
     <h1>images des sneakers</h1>
     <div>
-        <img src="./images/image15.png" alt="">
-        <img src="./images/image16.png" alt="">
-        <img src="./images/image17.png" alt="">
-        <img src="./images/image18.png" alt="">
-        <img src="./images/image19.png" alt="">
-        <img src="./images/image20.png" alt="">
+        <img src="./images/paire1-removebg-preview.png" alt="">
+        <img src="./images/paire2-removebg-preview.png" alt="">
+        <img src="./images/paire3-removebg-preview.png" alt="">
+        <img src="./images/paire4-removebg-preview.png" alt="">
+        <img src="./images/paire5-removebg-preview.png" alt="">
+        <img src="./images/paire6-removebg-preview.png" alt="">
     </div>
 </body>
 </html>
